--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5164,41 +5164,26 @@
 
         <!-- This is the longest AndroidManifest.xml ever. -->
 
-        <!-- Begin Alpha Settings -->
-        <activity android:name="Settings$AlphaSettingsActivity"
-                android:label="@string/alpha_settings_title"
-                android:icon="@drawable/ic_settings_alpha"
+        <!-- Begin crDroid Settings -->
+        <activity android:name="Settings$crDroidSettingsLayoutActivity"
+                android:label="@string/crdroid_settings_title"
+                android:icon="@drawable/ic_homepage_crdroid"
                 android:exported="true"
                 android:taskAffinity="com.android.settings"
                 android:parentActivityName="Settings">
             <intent-filter android:priority="1">
-                <action android:name="com.alpha.settings.AlphaSettings" />
+                <action android:name="com.android.settings.action.SETTINGS"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="com.android.settings.SHORTCUT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.summary"
-                       android:resource="@string/alpha_settings_summary"/>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                       android:value="com.alpha.settings.AlphaSettings" />
+                       android:value="com.crdroid.settings.crDroidSettingsLayout" />
+            <meta-data android:name="com.android.settings.title"
+                       android:resource="@string/crdroid_settings_title" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/crdroid_settings_summary"/>
             <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
                        android:value="true" />
         </activity>
-        <activity android:name="com.alpha.settings.fragments.about.ChangelogActivity"
-                android:label="@string/changelog_crdroid_title"
-                android:theme="@style/Theme.SubSettingsBase"
-                android:enabled="true"
-                android:exported="true"
-                android:taskAffinity="com.android.settings"
-                android:parentActivityName="Settings">
-            <intent-filter android:priority="70">
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
         <!-- Provide direct entry into Dev settings - Running Services -->
         <activity android:name="Settings$DevRunningServicesActivity"
                 android:label="@string/runningservices_settings_title"
@@ -5229,9 +5214,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.alpha.settings.fragments.ui.SmartPixels" />
+                android:value="com.crdroid.settings.fragments.ui.SmartPixels" />
         </activity>
-        <activity android:name="com.alpha.settings.fragments.ui.DisplayCutoutForceFullscreenActivity"
+        <activity android:name="com.crdroid.settings.fragments.ui.DisplayCutoutForceFullscreenActivity"
                 android:label="@string/display_cutout_force_fullscreen_title"
                 android:theme="@style/Theme.SubSettingsBase"
                 android:enabled="true"
@@ -5243,14 +5228,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.alpha.settings.fragments.ui.doze.DozeReceiver"
+        <receiver android:name="com.crdroid.settings.fragments.ui.doze.DozeReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-        <service android:name="com.alpha.settings.fragments.ui.doze.DozeService"
+        <service android:name="com.crdroid.settings.fragments.ui.doze.DozeService"
                 android:exported="true"
                 android:permission="crDroidDozeService">
         </service>
